# haloforge-plugin-template

./: .gitignore  README.md  manifest.json
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: HelloToolbarBadge.tsx  index.tsx
