[package]
name = "hf-plugin-hello"
version = "0.1.0"
edition = "2021"
description = "HaloForge plugin template — Hello World (Level 2 slot injection example)"
license = "MIT"

[lib]
name = "hf_plugin_hello"
crate-type = ["cdylib"]

[dependencies]
hf-plugin-api = { package = "haloforge-plugin-api", version = "0.1" }
serde_json = "1"
