[package]
name = "hf-plugin-hello"
version = "0.2.2"
edition = "2021"
description = "HaloForge plugin template — Hello World (Level 2 slot injection example)"
license = "MIT"

[lib]
name = "hf_plugin_hello"
crate-type = ["cdylib"]

[dependencies]
hf-plugin-api = { package = "haloforge-plugin-api", version = "0.2.10" }
serde_json = "1"
